--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 
 			<h2>Background</h2>
 			<p></p>
-			<p> Hello everyone! My name is Bayar, I'm from Romania and I'm currently studying for a PhD in an interdisciplinary program that takes you in first
-			and allows you to decide on the subject at a subsequent date. It's called a <a href="http://www.dtc.ox.ac.uk/">DTC</a>. The previous sentence will soon become redundant since this is what time does to most things said about the present. I'm a pretty helpful guy so always feel that you can drop me a line (
+			<p> Hello everyone! My name is Bayar and I've been studying Computational Neuroscience in the last 4 years as part of the Vogels Lab  ( https://vogelslab.org) It's called a <a href="http://www.dtc.ox.ac.uk/">DTC</a>. The previous sentence will soon become redundant since this is what time does to most things said about the present. I'm a pretty helpful guy so always feel that you can drop me a line (
 			mai ales daca intelegi ce e intre paranteze). In broad strokes my interest fall into what I said bellow, but that's not what I'm all
 			about. I also love languages and I like to see myself as a bit of a translator, I love to look for the meaning of words and such :) 
 			My blog is right <a href="/blog">here</a></li> if you're interested to see what I'm thinking about.</a>
