--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
 
 			<h2>Background</h2>
 			<p></p>
-			<p> Hello everyone! My name is Bayar and I've been studying Computational Neuroscience in the last 4 years as part of the Vogels Lab  ( https://vogelslab.org) It's called a <a href="http://www.dtc.ox.ac.uk/">DTC</a>. The previous sentence will soon become redundant since this is what time does to most things said about the present. I'm a pretty helpful guy so always feel that you can drop me a line (
-			mai ales daca intelegi ce e intre paranteze). In broad strokes my interest fall into what I said bellow, but that's not what I'm all
-			about. I also love languages and I like to see myself as a bit of a translator, I love to look for the meaning of words and such :) 
-			My blog is right <a href="/blog">here</a></li> if you're interested to see what I'm thinking about.</a>
+			<p> Hello everyone! My name is Bayar and I've been studying Computational Neuroscience in the last 4 years as part of the Vogels Lab<a href="https://vogelslab.org">Vogels Lab </a>.  
+				
+				
+		%The previous sentence will soon become redundant since this is what time does to most things said about the present. I'm a pretty helpful guy so always feel that you can drop me a line (
+		%	mai ales daca intelegi ce e intre paranteze). In broad strokes my interest fall into what I said bellow, but that's not what I'm all
+		%	about. I also love languages and I like to see myself as a bit of a translator, I love to look for the meaning of words and such :) 
+		%	My blog is right <a href="/blog">here</a></li> if you're interested to see what I'm thinking about.</a>
 			</p>
 			<p></p>
 			DPhil candidate Life Sciences Interface DTC, Oxford University<br>
@@ -58,7 +61,7 @@
 <iframe src="//player.vimeo.com/video/108518620" width="500" height="500" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/108503495">simulation ii</a> from <a href="http://vimeo.com/user33155476">Bayar Ilan</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 <li>	II. Completed a 11-week short project in the Vogels Group studying <b>"Exploring the interaction of excitatory and inhibitory STDP in recurrent networks"</b></li>	
-<p><img src="images/neuron_stats.png" width="600" height="600"></p>
+<p><img src="images/animate_superspike.png" width="600" height="600"></p>
 			<li>	
 
 			III. Completed a 11-week short project in studying <b>"Discrete cellular modelling with dynamic rest length within the Chaste framework"</b></li>	
