--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
 
 			<h2>Current Research:</h2>
 
-			<p> 	D. Phil research project in <b>"Understanding olfactory memory in the fruit fly"</b> in the group of Tim Vogels	</p>
+			<p> 	D. Phil research project in <b>"Understanding olfactory associate learning  in the fruit fly"</b> in the group of Tim Vogels	</p>
 
-
+<li> I am interested in teaching spiking neuron networks how to learn with a reinforcement signal. Below is the result of training a spiking neural network with Friedemann's Zenke SuperSpike learning rule so that the output spike pattern form the image of Oxford's Radcliffe Camera </li>	
+<p><img src="images/animate_superspike.png" width="600" height="600"></p>
+			<li>	
 
 	
 			<h2>Previously Completed projects</h2>
