--- a/index.html
+++ b/index.html
@@ -28,13 +28,11 @@
 				
 				
 		%The previous sentence will soon become redundant since this is what time does to most things said about the present. I'm a pretty helpful guy so always feel that you can drop me a line (
-		<!-->	mai ales daca intelegi ce e intre paranteze). In broad strokes my interest fall into what I said bellow, but that's not what I'm all
+	<!--	mai ales daca intelegi ce e intre paranteze). In broad strokes my interest fall into what I said bellow, but that's not what I'm all
 	  %	about. I also love languages and I like to see myself as a bit of a translator, I love to look for the meaning of words and such :)
 	  	%	My blog is right <a href="/blog">here</a></li> if you're interested to see what I'm thinking about.</a>
 
-	  
-	  
-	  <--!>
+-->
 				</p>
 			<p></p>
 			DPhil candidate Life Sciences Interface DTC, Oxford University<br>
