--- a/index.html
+++ b/index.html
@@ -46,24 +46,24 @@
     </header>
     <!-- End header -->
 
-    <div id="lead">
-        <div id="lead-content">
-            <h1>Bayar Menzat</h1>
-            <h2>Computational Neuroscientist</h2>
-            <a href="#" class="btn-rounded-white">Download Resume</a>
-        </div>
-        <!-- End #lead-content -->
+    <!-- <div id="lead"> -->
+    <!--     <div id="lead-content"> -->
+    <!--         <h1>Bayar Menzat</h1> -->
+    <!--         <h2>Computational Neuroscientist</h2> -->
+    <!--         <a href="#" class="btn-rounded-white">Download Resume</a> -->
+    <!--     </div> -->
+    <!--     <1!-- End #lead-content --1> -->
 
-        <div id="lead-overlay"></div>
+    <!--     <div id="lead-overlay"></div> -->
 
-        <div id="lead-down">
-            <span>
-                <i class="fa fa-chevron-down" aria-hidden="true"></i>
-            </span>
-        </div>
-        <!-- End #lead-down -->
-    </div>
-    <!-- End #lead -->
+    <!--     <div id="lead-down"> -->
+    <!--         <span> -->
+    <!--             <i class="fa fa-chevron-down" aria-hidden="true"></i> -->
+    <!--         </span> -->
+    <!--     </div> -->
+    <!--     <1!-- End #lead-down --1> -->
+    <!-- </div> -->
+    <!-- <1!-- End #lead --1> -->
 
     <div id="about">
         <div class="container">
