--- a/index.html
+++ b/index.html
@@ -114,12 +114,12 @@
     <div id="education">
         <h2 class="heading">Education</h2>
         <div class="education-block">
-            <h3>University of Ottawa</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
+            <h3>University of Oxford</h3>
+            <span class="education-date"> Oct 2014 - January 2019</span>
+            <h4>DPhil in Computational Neuroscience</h4>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-            </p>
+               My project was foncused on understanding how olfactory reinforcement learning is encoded in the fruit fly, Drosophila Melanogaster. I developed a spiking neural network and implemented a series of learning rules 
+            to test how dopamine and plasticity interact.</p>
         </div>
         <!-- End .education-block -->
 
