--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                    My name is Bayar and I study Computational Neuroscience at Oxford University in the Vogels Lab. 
+                
+I am a computational neuroscientist currently focused on modelling olfactory associative learning i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning,).  I focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals.  
+My previous experience is research in computer vision;  where among other projects I developed Kinect based games. 
                     </p>
                 </div>
             </div>
@@ -85,11 +87,10 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
             <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h3>Phd student in computational neuroscience</h3>
+                <h4>Oxford University</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                                    </p>
             </div>
 
             <div data-date="September 2015 – September 2016">
