--- a/index.html
+++ b/index.html
@@ -86,27 +86,25 @@ My previous experience is research in computer vision;  where among other projec
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2015 – September 2016">
+            <div data-date="September 2014 – January 2019">
                 <h3>Phd student in computational neuroscience</h3>
                 <h4>Oxford University</h4>
                 <p>
                                     </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+            <div data-date="August 2016, 2017">
+                <h3> Volunteer </h3>
+                <h4>Oxford for Romania</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+               I helped organized a summer school for Romanian high shool students who are preparing to apply to university and come from an underpvriviledged background.                </p>
             </div>
 
             <div data-date="September 2015 – September 2016">
                 <h3>Employer Name</h3>
-                <h4>Job Title</h4>
+                <h4>Essex University</h4>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                </p>
+                  I developed Microsoft Kinect video games based on gesture recognition control to study opportunities to use gesture recognition in physical rehabilitation.                 </p>
             </div>
         </div>
     </div>
