--- a/index.html
+++ b/index.html
@@ -97,11 +97,11 @@ My previous experience is research in computer vision;  where among other projec
                 <h3> Volunteer </h3>
                 <h4>Oxford for Romania</h4>
                 <p>
-               I helped organized a summer school for Romanian high shool students who are preparing to apply to university and come from an underpvriviledged background.                </p>
+              Volunteer teacher or Romanian high shool students who are preparing to apply to university and come from an underpvriviledged background.                </p>
             </div>
 
-            <div data-date="September 2015 – September 2016">
-                <h3>Employer Name</h3>
+            <div data-date="June 2013 –  August 2013">
+                <h3>Research Assistant</h3>
                 <h4>Essex University</h4>
                 <p>
                   I developed Microsoft Kinect video games based on gesture recognition control to study opportunities to use gesture recognition in physical rehabilitation.                 </p>
