--- a/index.html
+++ b/index.html
@@ -186,23 +186,24 @@ My previous experience is research in computer vision;  where among other projec
         <ul>
             <li>Python</li>
             <li>C++</li>
+            <li>Spiking neural networks</li>
         </ul>
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
-    </div>
-    <!-- End #contact -->
+    <!-- <div id="contact"> -->
+    <!--     <h2>Get in Touch</h2> -->
+    <!--     <div id="contact-form"> -->
+    <!--         <form method="POST" action="https://formspree.io/email@email.com"> -->
+    <!--             <input type="hidden" name="_subject" value="Contact request from personal website" /> -->
+    <!--             <input type="email" name="_replyto" placeholder="Your email" required> -->
+    <!--             <textarea name="message" placeholder="Your message" required></textarea> -->
+    <!--             <button type="submit">Send</button> -->
+    <!--         </form> -->
+    <!--     </div> -->
+    <!--     <1!-- End #contact-form --1> -->
+    <!-- </div> -->
+    <!-- <1!-- End #contact --1> -->
 
     <footer>
         <div class="container">
