--- a/index.html
+++ b/index.html
@@ -63,9 +63,13 @@
     <!--     <1!-- End #lead-down --1> -->
     <!-- </div> -->
     <!-- <1!-- End #lead --1> -->
- <div class="project-image">
-                        <img src="images/bayar.png" />
-                    </div>
+
+	
+	
+	
+	<!-- <div class="project-image"> -->
+ <!--                        <img src="images/bayar.png" /> -->
+ <!--                    </div> -->
 
     <div id="about">
         <div class="container">
