--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ My previous experience is research in computer vision;  where among other projec
         <!-- End .education-block -->
 
         <div class="education-block">
-            <h3>University of Ottawa</h3>
+            <h3>University of Essex</h3>
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
