--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ My previous experience is research in computer vision;  where among other projec
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/kinectmarbles.gif" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
