--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ My previous experience is research in computer vision;  where among other projec
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/project.jpg" />
+                        <img src="images/pjustme.pdf" />
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
