--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ My previous experience is research in computer vision;  where among other projec
             <div class="row">
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/justme.png" />
+                        <img src="images/justme.png" width="200" height="300">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
@@ -167,7 +167,7 @@ My previous experience is research in computer vision;  where among other projec
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/kinectmarbles.gif" />
+                        <img src="images/kinectmarbles.gif" width="200" height="300">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
