--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                     <p>
                
 I am a computational neuroscientist currently focused on modelling olfactory associative learning i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning,).  I focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals.  
-My previous experience is research in computer vision;  where among other projects I developed Kinect based games. 
+My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
+
                     </p>
                 </div>
             </div>
@@ -167,7 +168,7 @@ My previous experience is research in computer vision;  where among other projec
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/kinectmarbles.gif" width="350" height="200">
+                        <img src="images/kinectmarbles.png" width="350" height="200">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
