--- a/index.html
+++ b/index.html
@@ -134,12 +134,15 @@ My previous experience is research in computer vision;  where among other projec
             <span class="education-date">Sept 2016 - Sept 2017</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
+				 <li>
+                    1st class degree ,              </li>
+
                 <li>
-                   Computer Vision                </li>
+                   Computer Vision  ,              </li>
                 <li>
-                   Game programming                </li>
+                   Game programming  ,              </li>
                 <li>
-                   Neural networks                </li>
+                   Neural networks     ,           </li>
             </ul>
         </div>
         <!-- End .education-block -->
