--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                     <h2 class="heading">About Me</h2>
                 </div>
                 <div class="col-md-8">
-                    <p>
+                    <p aling="left">
                
 					I am a computational neuroscientist currently focused on modelling olfactory associative learning i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning,). </p>
-					<p>I focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals.  
+					<p align="left">I focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals.  
 My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </p>
                 </div>
@@ -160,7 +160,9 @@ My previous experience is research in computer vision;  where among other projec
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3> Modelling dopamine modulated learning in the olfactory circuit of the fruit fly</h3>
-                        <p>
+                        <p align="left">
+
+
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
                         </p>
                         <a href="#">View Project</a>
