--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                 <div class="col-md-8">
                     <p aling="left">
                
-					I am a computational neuroscientist currently focused on modelling olfactory associative learning i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning,). </p>
-					<p align="left">I focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals.  
+		I am a computational neuroscientist currently focused on modelling olfactory associative learning i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning).  I  focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals.  
 My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                     </p>
                 </div>
