--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@ My previous experience is research in computer vision;  where among other projec
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
-                    </p>
+                    No copyright whatsoever. 
+                                           </p>
                 </div>
                 <div class="col-sm-2 top">
                     <span id="to-top">
@@ -257,5 +257,4 @@ My previous experience is research in computer vision;  where among other projec
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js/scripts.min.js"></script>
 </body>
-
 </html>
