--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@ My previous experience is research in computer vision;  where among other projec
             <li>Python</li>
             <li>C++</li>
             <li>Spiking neural networks</li>
+
+            <li>Reward based learning</li>
         </ul>
     </div>
     <!-- End #skills -->
