--- a/index.html
+++ b/index.html
@@ -76,11 +76,14 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
+
                 </div>
+   <img src="images/kinectmarbles.png" align="left" width="320" height="200">
+
                 <div class="col-md-8">
-                    <p aling="left">
+                    <p align="left">
                
-		I am a computational neuroscientist in the Vogels Lab at Oxford Uni. Research focused on: odelling olfactory associative learning -- i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning). 
+		I am a computational neuroscientist in the Vogels Lab at Oxford Uni. Research focused on: modelling olfactory associative learning -- i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning). 
 		
 		<!-- I  focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals. -->  
 <!-- My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> -->
