--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <div id="mobile-menu-close">
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
+
+   <img src="images/reward_banner.png" align="left" width="320" height="200">
+
+
         <ul id="menu" class="shadow">
             <li>
                 <a href="#about">About</a>
@@ -76,7 +80,6 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
-
    <img src="images/dreamer2.png" align="left" width="320" height="200">
                 </div>
 
