--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
-   <img src="images/dreamer2.png" align="left" width="320" height="200">
+   <img src="images/dreamer2.jpg" align="left" width="320" height="200">
                 </div>
 
                 <div class="col-md-8">
