--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
             <span>Close</span> <i class="fa fa-times" aria-hidden="true"></i>
         </div>
 
-   <img src="images/reward_banner.png" align="left" width="320" height="200">
 
 
         <ul id="menu" class="shadow">
+
+   <img src="images/reward_banner.pdf" align="left" width="320" height="200">
             <li>
                 <a href="#about">About</a>
             </li>
