--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <li>C++</li>
             <li>Spiking neural networks</li>
 
-            <li>Reward based learning</li>
+            <li>Reward based learning rules</li>
         </ul>
     </div>
     <!-- End #skills -->
