--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
         <ul id="menu" class="shadow">
 
-   <img src="images/reward_banner.png" align="left" width="200" height="200">
+   <img src="images/reward_banner.png" align="centre" width="200" height="200">
             <li>
                 <a href="#about">About</a>
             </li>
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="col-md-4">
                     <h2 class="heading">About Me</h2>
-   <img src="images/dreamer2.jpg" align="left" width="320" height="200">
+   <img src="images/bayar_happy.jpg" align="left" width="320" height="200">
                 </div>
 
                 <div class="col-md-8">
