--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
             <span class="education-date"> Oct 2014 - January 2019</span>
             <h4>DPhil in Computational Neuroscience</h4>
             <p>
-               My project was foncused on understanding how olfactory reinforcement learning is encoded in the fruit fly, Drosophila Melanogaster. I developed a spiking neural network and implemented a series of learning rules 
-            to test how dopamine and plasticity interact.</p>
+               My DPhil was foncused on modelling how olfactory reinforcement learning is encoded in the fruit fly, Drosophila Melanogaster. I developed a spiking neural network and implemented a series of learning rules 
+            to test how dopamine and plasticity interact. I have also been a teaching assistant for introduction to programming, Graph Theory and Computational neuroscience modules.</p>
         </div>
         <!-- End .education-block -->
 
@@ -171,9 +171,8 @@
                         <h3> Modelling dopamine modulated learning in the olfactory circuit of the fruit fly</h3>
                         <p align="left">
 
-
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+							We developed a spiking neural network based on the known wiring diagram of the olfactory circuit of the fruit fly. We tested a family of learning rules to find a mechanism for learning, forgetting and re-learning that is in accordance with experimental evidence. 
+                                                 </p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
@@ -188,8 +187,7 @@
                     <div class="project-info">
                         <h3> Kinect Marble racing</h3>
                         <p>
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur in iaculis ex. Etiam volutpat laoreet urna. Morbi ut tortor nec nulla commodo malesuada sit amet vel lacus. Fusce eget efficitur libero. Morbi dapibus porta quam laoreet placerat.
-                        </p>
+                           I developed a library for gesture recognition based on the Microsoft Kinect camera and tested in a game where the user had to control a ball with his body movements and a prototype.                        </p>
                         <a href="#">View Project</a>
                     </div>
                     <!-- End .project-info -->
