--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="https://github.com/bayarovici">Code</a>
             </li>
         </ul>
   <!-- <img src="images/reward_banner.png" align="centre" width="200" height="200"> -->
@@ -67,7 +67,7 @@
     <!--         </span> -->
     <!--     </div> -->
     <!--     <1!-- End #lead-down --1> -->
-    <!-- </div> -->
+    <!-- </div> --
     <!-- <1!-- End #lead --1> -->
 
 	
@@ -88,7 +88,7 @@
                 <div class="col-md-8">
                     <p align="left">
                
-		I am a computational neuroscientist in the Vogels Lab at Oxford Uni. Research focused on: modelling olfactory associative learning -- i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning). 
+		I am a computational neuroscientist in the Vogels Lab at Oxford Uni. Research focused on: modelling olfactory associative learning -- i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning). Check my code on my   <a href="https://github.com/bayarovici">GitHub</a> page.
 		
 		<!-- I  focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals. -->  
 <!-- My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> -->
