--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                 <a href="#skills">Skills</a>
             </li>
             <li>
-                <a href="https://github.com/bayarovici">Code</a>
+
+				<a href="https://github.com/bayarovici/" onclick="location.replace('https://github.com/bayarovici/'),'_top'">Code</a>
+                <!-- <a href="https://github.com/bayarovici">Code</a> -->
             </li>
         </ul>
   <!-- <img src="images/reward_banner.png" align="centre" width="200" height="200"> -->
