--- a/index.html
+++ b/index.html
@@ -164,6 +164,41 @@
         <h2 class="heading">Projects</h2>
         <div class="container">
             <div class="row">
+
+
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/justme.png" width="320" height="200">
+                    </div>
+                    <!-- End .project-image -->
+                    <div class="project-info">
+                        <h3> Modelling olfactory learning using SuperSpike </h3>
+                        <p align="left">
+
+                        Recent theoretical results (Lillicrap et al. 2016) have shown that backpropagation does not need symmetric weights to achieve high performance for real-world learning problems. 
+                        A recent implementation (Zenke et al. 2016) has proposed a three-factor learning rule (dopamine modulated plasticity) can learn precise output spike trains. I implemented a spiking
+                        neural network based on the olfactory circuit of the fly and I adapted the SuperSpike learning rule to the problem of olfactory reinforcement learning. 
+
+						                                                 </p>
+                        <a href="#">View Project</a>
+                    </div>
+                    <!-- End .project-info -->
+                </div>
+                <!-- End .project -->
+
+                <div class="project shadow-large">
+                    <div class="project-image">
+                        <img src="images/kinectmarbles.png" width="320" height="200">
+                    </div>
+                    <!-- End .project-image -->
+
+
+
+
+
+
+
                 <div class="project shadow-large">
                     <div class="project-image">
                         <img src="images/justme.png" width="320" height="200">
@@ -186,6 +221,13 @@
                         <img src="images/kinectmarbles.png" width="320" height="200">
                     </div>
                     <!-- End .project-image -->
+
+
+
+
+
+
+
                     <div class="project-info">
                         <h3> Kinect Marble racing</h3>
                         <p>
