--- a/index.html
+++ b/index.html
@@ -169,15 +169,15 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/justme.png" width="320" height="200">
+                        <img src="images/rad_network.png" width="320" height="200">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
                         <h3> Modelling olfactory learning using SuperSpike </h3>
                         <p align="left">
 
-                        Recent theoretical results (Lillicrap et al. 2016) have shown that backpropagation does not need symmetric weights to achieve high performance for real-world learning problems. 
-                        A recent implementation (Zenke et al. 2016) has proposed a three-factor learning rule (dopamine modulated plasticity) can learn precise output spike trains. I implemented a spiking
+                        Recent theoretical results has shown that backpropagation does not need symmetric weights to achieve high performance for training an SNN.
+                        Zenke et al. 2016 has proposed a three-factor learning rule that can learn precise output spike trains called SuperSpike. I implemented a spiking
                         neural network based on the olfactory circuit of the fly and I adapted the SuperSpike learning rule to the problem of olfactory reinforcement learning. 
 
 						                                                 </p>
