--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 
                 <div class="project shadow-large">
                     <div class="project-image">
-                        <img src="images/fly_network.png width="320" height="200">
+                        <img src="images/fly_network.png" width="320" height="200">
                     </div>
                     <!-- End .project-image -->
                     <div class="project-info">
