--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
  <!--                        <img src="images/bayar.png" /> -->
  <!--                    </div> -->
 
+
+
+
+
+
     <div id="about">
         <div class="container">
             <div class="row">
@@ -90,7 +95,7 @@
                 <div class="col-md-8">
                     <p align="left">
                
-		I am a computational neuroscientist in the Vogels Lab at Oxford Uni. Research focused on: modelling olfactory associative learning -- i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning). Check my code on my   <a href="https://github.com/bayarovici">GitHub</a>. 
+		I am a computational neuroscientist in the Vogels Lab at Oxford Uni. Research focused on: modelling olfactory associative learning -- i.e encoding odours using sparse coding strategies and learning predictive coding (aversive and reward learning  as well as forgetting and re-learning). Check my code on my  
 		
 		<!-- I  focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals. -->  
 <!-- My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> -->
@@ -101,64 +106,8 @@
     </div>
     <!-- End #about -->
 
-    <div id="experience" class="background-alt">
-        <h2 class="heading">Experience</h2>
-        <div id="experience-timeline">
-            <div data-date="September 2014 – January 2019">
-                <h3>Phd student in computational neuroscience</h3>
-                <h4>Oxford University</h4>
-                <p>
-                                    </p>
-            </div>
 
-            <div data-date="August 2016, 2017">
-                <h3> Volunteer </h3>
-                <h4>Oxford for Romania</h4>
-                <p>
-              Volunteer teacher or Romanian high shool students who are preparing to apply to university and come from an underpvriviledged background.                </p>
-            </div>
 
-            <div data-date="June 2013 –  August 2013">
-                <h3>Research Assistant</h3>
-                <h4>Essex University</h4>
-                <p>
-                  I developed Microsoft Kinect video games based on gesture recognition control to study opportunities to use gesture recognition in physical rehabilitation.                 </p>
-            </div>
-        </div>
-    </div>
-    <!-- End #experience -->
-
-    <div id="education">
-        <h2 class="heading">Education</h2>
-        <div class="education-block">
-            <h3>University of Oxford</h3>
-            <span class="education-date"> Oct 2014 - January 2019</span>
-            <h4>DPhil in Computational Neuroscience</h4>
-            <p>
-               My DPhil was foncused on modelling how olfactory reinforcement learning is encoded in the fruit fly, Drosophila Melanogaster. I developed a spiking neural network and implemented a series of learning rules 
-            to test how dopamine and plasticity interact. I have also been a teaching assistant for introduction to programming, Graph Theory and Computational neuroscience modules.</p>
-        </div>
-        <!-- End .education-block -->
-
-        <div class="education-block">
-            <h3>University of Essex</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
-            <h4>Bachelor of Science in Computer Science</h4>
-            <ul>
-				 <li>
-                    1st class degree ,              </li>
-
-                <li>
-                   Computer Vision  ,              </li>
-                <li>
-                   Game programming  ,              </li>
-                <li>
-                   Neural networks     ,           </li>
-            </ul>
-        </div>
-        <!-- End .education-block -->
-    </div>
-    <!-- End #education -->
 
     <div id="projects" class="background-alt">
         <h2 class="heading">Projects</h2>
@@ -237,6 +186,67 @@
         </div>
     </div>
     <!-- End #projects -->
+
+
+    <div id="experience" class="background-alt">
+        <h2 class="heading">Experience</h2>
+        <div id="experience-timeline">
+            <div data-date="September 2014 – January 2019">
+                <h3>Phd student in computational neuroscience</h3>
+                <h4>Oxford University</h4>
+                <p>
+                                    </p>
+            </div>
+
+            <div data-date="August 2016, 2017">
+                <h3> Volunteer </h3>
+                <h4>Oxford for Romania</h4>
+                <p>
+              Volunteer teacher or Romanian high shool students who are preparing to apply to university and come from an underpvriviledged background.                </p>
+            </div>
+
+            <div data-date="June 2013 –  August 2013">
+                <h3>Research Assistant</h3>
+                <h4>Essex University</h4>
+                <p>
+                  I developed Microsoft Kinect video games based on gesture recognition control to study opportunities to use gesture recognition in physical rehabilitation.                 </p>
+            </div>
+        </div>
+    </div>
+    <!-- End #experience -->
+
+    <div id="education">
+        <h2 class="heading">Education</h2>
+        <div class="education-block">
+            <h3>University of Oxford</h3>
+            <span class="education-date"> Oct 2014 - January 2019</span>
+            <h4>DPhil in Computational Neuroscience</h4>
+            <p>
+               My DPhil was foncused on modelling how olfactory reinforcement learning is encoded in the fruit fly, Drosophila Melanogaster. I developed a spiking neural network and implemented a series of learning rules 
+            to test how dopamine and plasticity interact. I have also been a teaching assistant for introduction to programming, Graph Theory and Computational neuroscience modules.</p>
+        </div>
+        <!-- End .education-block -->
+
+        <div class="education-block">
+            <h3>University of Essex</h3>
+            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <h4>Bachelor of Science in Computer Science</h4>
+            <ul>
+				 <li>
+                    1st class degree ,              </li>
+
+                <li>
+                   Computer Vision  ,              </li>
+                <li>
+                   Game programming  ,              </li>
+                <li>
+                   Neural networks     ,           </li>
+            </ul>
+        </div>
+        <!-- End .education-block -->
+    </div>
+    <!-- End #education -->
+
 
     <div id="skills">
         <h2 class="heading">Skills</h2>
