--- a/index.html
+++ b/index.html
@@ -191,7 +191,14 @@
     <div id="experience" class="background-alt">
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
-            <div data-date="September 2014 – January 2019">
+
+            <div data-date="April 2019 – July 2019">
+                <h3>EF Cohort member</h3>
+                <h4>Entrepreneur First</h4>
+                <p>
+                                    </p>
+            </div>
+            <div data-date="September 2014 – May 2019">
                 <h3>Phd student in computational neuroscience</h3>
                 <h4>Oxford University</h4>
                 <p>
