--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                         <h3> Kinect Marble racing</h3>
                         <p>
                            I developed a library for gesture recognition based on the Microsoft Kinect camera and tested in a game where the user had to control a ball with his body movements and a prototype.                        </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/bayarovici/KinnectMarbleRacing">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
