--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 <div class="col-md-8">
                     <p align="left">
                
-		Software engineer. PhD in Computational Neuroscience. Based in the Vogels Lab at Oxford University. Main interests: olfactory learning, insect learning, mushroom body, dopamine modulated plasticity. 	
+		Scientist and software engineer. PhD in Computational Neuroscience. Based in the Vogels Lab at Oxford University. Main interests: olfactory learning, insect learning, mushroom body, dopamine modulated plasticity. 	
 		<!-- I  focus on learning rules that are similar to artificial neural networks that use backpropagation, but adapted to experimental evidence that studies activity of dopaminergic neurons in the brain of animals. -->  
 <!-- My previous experience is research in computer vision;  where among other projects I developed Kinect based games.   <a href="https://github.com/bayarovici" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a> -->
                     </p>
