--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 
         <div class="education-block">
             <h3>University of Essex</h3>
-            <span class="education-date">Sept 2016 - Sept 2017</span>
+            <span class="education-date">Sept 2010- June 2013</span>
             <h4>Bachelor of Science in Computer Science</h4>
             <ul>
 				 <li>
@@ -244,9 +244,9 @@
                 <li>
                    Computer Vision  ,              </li>
                 <li>
-                   Game programming  ,              </li>
+                   C++ game programming  ,              </li>
                 <li>
-                   Neural networks     ,           </li>
+                   Neural networks                </li>
             </ul>
         </div>
         <!-- End .education-block -->
@@ -260,7 +260,6 @@
             <li>Python</li>
             <li>C++</li>
             <li>Spiking neural networks</li>
-
             <li>Reward based learning rules</li>
         </ul>
     </div>
