--- a/index.html
+++ b/index.html
@@ -191,14 +191,23 @@
         <h2 class="heading">Experience</h2>
         <div id="experience-timeline">
 
-            <div data-date="April 2019 – July 2019">
-                <h3>EF Cohort member</h3>
-                <h4>Entrepreneur First</h4>
+		
+            <div data-date="April 2021 – ">
+                <h3>Machine Learning Specialist in Immunology</h3>
+                <h4>Etcembly</h4>
                 <p>
                                     </p>
             </div>
-            <div data-date="September 2014 – May 2019">
-                <h3>Phd student in computational neuroscience</h3>
+		
+		
+            <div data-date="Dec 2019 – April 2021">
+                <h3>AI Researcher</h3>
+                <h4>Akrivia Health</h4>
+                <p>
+                                    </p>
+            </div>
+            <div data-date="September 2014 – Sept 2019">
+                <h3>DPhil student in computational neuroscience</h3>
                 <h4>Oxford University</h4>
                 <p>
                                     </p>
